Bug 154118 - FILEOPEN: PPT: Incorrect indent
Summary: FILEOPEN: PPT: Incorrect indent
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Paragraph-Indent
  Show dependency treegraph
 
Reported: 2023-03-10 15:51 UTC by Xisco Faulí
Modified: 2023-05-17 10:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (114.50 KB, application/vnd.ms-powerpoint)
2023-03-10 15:51 UTC, Xisco Faulí
Details
Comparsion MSO vs LibreOffice 7.6 master (248.10 KB, image/png)
2023-03-10 15:52 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-03-10 15:51:46 UTC
Created attachment 185898 [details]
sample file

Steps to reproduce:
1. Open attached document

-> The indent of "Tentative contents:" and "6. Case Study and Assignments for Designing a Complete System" lines is incorrect. See comparison

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c1af1b9c555480305862336954ceefe14865e27d
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-03-10 15:52:30 UTC
Created attachment 185899 [details]
Comparsion MSO vs LibreOffice 7.6 master
Comment 2 Xisco Faulí 2023-03-10 15:53:19 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2023-02-07 20:22:25 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-02-08 11:03:36 +0000
commit a0875d09d9eeb368e9e319f3f2f29ec3be71b56c (patch)
tree 179c3f2e27c16226e166d25abf679672dcbe348f
parent 9bf7092aa05b47e6290d894edaf00f21038a636a (diff)
editeng: remove SvxLRSpaceItem::nTxtLeft

Bisected with: bibisect-linux64-7.6

Adding Cc: to Michael Stahl
Comment 3 Xisco Faulí 2023-05-15 13:49:47 UTC
attachment 61720 from bug 61720 is also affected by this issue
Comment 4 Commit Notification 2023-05-17 10:32:53 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d92a89afbdff4faddc869fde88bb6b52d300ea60

tdf#154118: ppt: use SetTextLeft instead of SetLeft

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.