tdf#154118: ppt: use SetTextLeft instead of SetLeft

and for that, call SetTextFirstLineOffsetValue first
Also simplify the code a bit

Regression from a0875d09d9eeb368e9e319f3f2f29ec3be71b56c
"editeng: remove SvxLRSpaceItem::nTxtLeft"

Change-Id: If45ded4602f2c9acc885439940db9741d16a5534
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151827
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>